/*
 *
 * Copyright 2021 gRPC authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";

option go_package = "internal/testserver";

package helloworld;

// The greeting service definition.
service TestServer {
  // Sends a greeting
  rpc SendMessage (MessageRequest) returns (MessageReply) {}
}

// The request message containing the user's name.
message MessageRequest {
  string request = 1;
}

// The response message containing the greetings
message MessageReply {
  string response = 1;
}
